--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -1,6 +1,6 @@
 ---
-title: "SARS-CoV-2 circulation in Africa"
-authors: "John Huddleston"
-date: "September 29, 2021"
-dataset: https://nextstrain.org/ncov/gisaid/africa/2021-09-03?d=map&p=full
+title: "Zika Virus Phylogenetic Analysis"
+authors: "Tanya Kiryutina from Nextstrain Narrative training (UGA)"
+date: "June 20, 2024"
+dataset: https://nextstrain.org/community/tkiryuti/zika
 ---
