--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -1,6 +1,6 @@
 ---
 title: "Zika Virus Phylogenetic Analysis"
-authors: "Tanya Kiryutina from Nextstrain Narrative training (UGA)"
+authors: "Tanya Kiryutina; Nextstrain Narrative training (UGA)"
 date: "June 20, 2024"
 dataset: https://nextstrain.org/community/tkiryuti/zika
 ---
