--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -5,6 +5,6 @@ date: "June 20, 2024"
 dataset: https://nextstrain.org/community/tkiryuti/zika
 ---
 
-# [Singapore and Dominican Republic (https://nextstrain.org/community/tkiryuti/zika?f_country=Singapore,Dominican%20Republic)]
+# [Singapore and Dominican Republic] (https://nextstrain.org/community/tkiryuti/zika?f_country=Singapore,Dominican%20Republic)
 
 
