--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -7,4 +7,9 @@ dataset: https://nextstrain.org/community/tkiryuti/zika
 
 # [Singapore and Dominican Republic](https://nextstrain.org/community/tkiryuti/zika?f_country=Singapore,Dominican%20Republic)
 
+Some content.
+
+# [Animation Example](https://nextstrain.org/community/tkiryuti/zika?animate=2012-11-24,2016-11-04,0,0,30000&d=map&f_country=Dominican%20Republic,Singapore,Venezuela,Brazil&p=full)
+
+More content.
 
