--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -13,3 +13,6 @@ Some content.
 
 More content.
 
+# [Zika transmission](https://nextstrain.org/community/tkiryuti/zika?d=tree,map&p=grid)
+
+Over time for all countries.
