--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -13,6 +13,6 @@ Some content.
 
 More content.
 
-# [Zika transmission](https://nextstrain.org/community/tkiryuti/zika?d=tree,map&p=grid)
+# [Zika transmission](https://nextstrain.org/community/tkiryuti/zika?animate=2012-11-24,2016-11-04,0,0,30000&d=tree,map&p=grid)
 
 Over time for all countries.
