--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -5,6 +5,14 @@ date: "June 20, 2024"
 dataset: https://nextstrain.org/community/tkiryuti/zika
 ---
 
+# [Introduction to the Zika virus](https://nextstrain.org/community/tkiryuti/zika)
+
+Introductory content on the left side.
+
+```auspiceMainDisplayMarkdown
+# Introductory content on the right side.
+```
+
 # [Singapore and Dominican Republic](https://nextstrain.org/community/tkiryuti/zika?f_country=Singapore,Dominican%20Republic)
 
 Some content.
@@ -18,4 +26,7 @@ More content.
 Over time for all countries.
 
 # [Regression rate estimate](https://nextstrain.org/community/tkiryuti/zika?d=tree&l=clock&p=full)
+
+
+
 
