--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -7,10 +7,16 @@ dataset: https://nextstrain.org/community/tkiryuti/zika
 
 # [Introduction to the Zika virus](https://nextstrain.org/community/tkiryuti/zika)
 
-Introductory content on the left side.
+Introductory title on the left side.
+Left side content. 
 
 ```auspiceMainDisplayMarkdown
-# Introductory content on the right side.
+# Introductory title on the right side.
+Right side content.
+# Bullet point list.
+- point 1
+- point 2
+- point 3
 ```
 
 # [Singapore and Dominican Republic](https://nextstrain.org/community/tkiryuti/zika?f_country=Singapore,Dominican%20Republic)
