--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -16,6 +16,9 @@ Right side content.
 - point 1
 - point 2
 - point 3
+
+# Zika Geographic Risk Classifications (as of May 15, 2024):
+<img src="" alt="Map" width="50%"/>
 ```
 
 # [Singapore and Dominican Republic](https://nextstrain.org/community/tkiryuti/zika?f_country=Singapore,Dominican%20Republic)
@@ -31,6 +34,9 @@ More content.
 Over time for all countries.
 
 # [Regression rate estimate](https://nextstrain.org/community/tkiryuti/zika?d=tree&l=clock&p=full)
+
+
+
 
 
 
