--- a/narratives/zika_240620.md
+++ b/narratives/zika_240620.md
@@ -17,8 +17,9 @@ Right side content.
 - point 2
 - point 3
 
-# Zika Geographic Risk Classifications (as of May 15, 2024):
-<img src="" alt="Map" width="50%"/>
+# Zika Image:
+<img src="https://github.com/tkiryuti/zika/blob/main/figures/Zika-16x9.jpg?raw=true" alt="Map" width="50%"/>
+Obtained by searching "zika outbreak in 2015" in google images and using one from here: https://speakingofmedicine.plos.org/2016/01/07/will-zika-become-the-2016-ntd-of-the-year/ 
 ```
 
 # [Singapore and Dominican Republic](https://nextstrain.org/community/tkiryuti/zika?f_country=Singapore,Dominican%20Republic)
